Small icon tweaks, spacing fixes

--- a/pages/App.scss
+++ b/pages/App.scss
@@ -383,12 +383,13 @@ header h1 {
   font-size: 1.8em;
   margin: 0;
   display: inline;
-  grid-area: desc
+  grid-area: desc;
 }
 
 .header-desc-span {
   font-size: 0.8em;
-  grid-area: myspan
+  grid-area: myspan;
+  text-align: left;
 }
 
 .main-title {
@@ -3310,10 +3311,14 @@ footer {
 
   .preview-container {
     flex-direction: row;
-    justify-content: space-between;
+    justify-content: center;
     gap: 7%;
     padding: 2rem 2rem 5rem 2rem;
     margin: 0 auto;
+  }
+
+  .gallery-preview {
+    margin: 0
   }
 
   .cleaning-process-title {
